2018-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/getcolor.c src/save.c src/set.c src/show.c src/tables.c
	demo/pm3dcolors.dem:

	Remove broken support for CIE/XYZ color space.  As reported by 
	Risto A. Paju, the XYZ->RGB transformation in getcolor.c is not correct.
	Furthermore it has never been correct.  As with the YIQ color space
	support removed a while ago, the transformation matrix was apparently
	never checked and hence any script that relied on it never produced
	correct output.
	Replace the black->gold palette example with an RGB space equivalent.
	Bug #2078

2018-10-18  Ethan A Merritt  <merritt@u.washington.edu>

	* datafile.c (df_open): "stats 'foo.dat' noautoscale"
	* graphics.c (plot_boxplot): bail early on empty data set
	* graphics.c (process_image): cannot clip if there is no bounding box
	* plot3d.c: "with vectors" style is not possible for a function splot
	* plot3d.c: cannot contour a plot with NODATA
	* term.c (estimate_strlen): mark string parameter as (const char *)
	* dumb.trm (ENHdumb_put_text): range-check (x,y) coords of enhanced text
	* post.trm (PS_options): Sanity check font size must be < 1000.
	* svg.trm (ENHsvg_writec): split output text into buffer-sized chunks

	Corner-case bugs found by afl-fuzz

2018-10-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/graphics.c src/plot2d.c src/set.c demo/boxplot.dem:
	New command option 'set style boxplot medianlinewidth <lw>'
	can be used to emphasize the position of the median.

2018-10-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/libcerf.c:  Version 1.7 of libcerf introduced a conflicting
	definition of "cmplx". Fortunately it is nice enough to handle the
	conflict if detected, but that means our definition of cmplx in
	cp_types.h must come before inclusion of cerf.h.

2018-10-06  Release 5.2.5

2018-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  Fix regression in parametric plots with logscale x.